@@ -1,3 +1,15 @@
+Sat May 12 11:03:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ASNMP/asnmp/transaction.cpp:
+        * Kokyu/Dispatch_Deferrer.cpp:
+          Compare return value of schedule_timer with -1
+
+        * ace/OS_NS_time.h:
+          None of the windows compilers define ACE_LACKS_LONGLONG_T
+
+        * bin/PerlACE/TestTarget_WinCE.pm:
+          Typo fix
+
 Sat May 12 11:01:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-win32-common.h:
